--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,12 +6,12 @@
 	"display": "standalone",
 	"icons": [
 		{
-			"src": "/favicon-16x16.png",
+			"src": "icons/favicon-16x16.png",
 			"sizes": "16x16",
 			"type": "image/png"
 		},
 		{
-			"src": "/favicon-32x32.png",
+			"src": "icons/favicon-32x32.png",
 			"sizes": "32x32",
 			"type": "image/png"
 		}
