--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # - name: Run Tests
-      #   run: npm test
+      - name: Run Linter
+        run: npm run lint
 
-      - name: Build Project
-        run: npm run build
+      - name: Run Tests
+        run: npm run test
 
   docker:
     needs: build
