--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-	"name": "alibaba-challenge",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite --port 4200 --host 0.0.0.0",
-		"build": "tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.0.6",
-		"json-server": "^1.0.0-beta.3",
-		"leaflet": "^1.9.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-leaflet": "^5.0.0",
-		"react-router-dom": "^6.29.0",
-		"tailwindcss": "^4.0.6"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.19.0",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
-		"@types/leaflet": "^1.9.16",
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
-		"@vitejs/plugin-react": "^4.3.4",
-		"@vitest/ui": "^3.0.5",
-		"eslint": "^9.19.0",
-		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-react-refresh": "^0.4.18",
-		"globals": "^15.14.0",
-		"jsdom": "^26.0.0",
-		"typescript": "~5.7.2",
-		"typescript-eslint": "^8.22.0",
-		"vite": "^6.1.0",
-		"vite-plugin-pwa": "^0.21.1",
-		"vitest": "^3.0.5"
-	}
+  "name": "alibaba-challenge",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --port 4200 --host 0.0.0.0",
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext .ts",
+    "preview": "vite preview",
+    "test": "vitest",
+    "json-server": "json-server --watch src/db.json --port 3001 --host 0.0.0.0"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
+    "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^6.29.0",
+    "tailwindcss": "^4.0.6"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/leaflet": "^1.9.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.5",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0",
+    "vite-plugin-pwa": "^0.21.1",
+    "vitest": "^3.0.5"
+  }
 }
