--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --port 4200 --host 0.0.0.0",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
     "json-server": "json-server --watch src/db.json --port 3001 --host 0.0.0.0"
