--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run test
 
   docker:
-    needs: build
+    needs: lint-and-tests
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
 
