--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --port 4200 --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier \"./**/*.{tsx,json,css,html}\" --write",
     "preview": "vite preview",
     "test": "vitest",
     "json-server": "json-server --watch src/db.json --port 3001 --host 0.0.0.0"
@@ -15,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
+    "prettier": "^3.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
