feat: add formatter step to CI process

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Run Linter
         run: npm run lint
 
+      - name: Run Formatter
+        run: npm run format
+
       - name: Run Tests
         run: npm run test
 
