--- a/.prettierrc
+++ b/.prettierrc
@@ -12,12 +12,5 @@
   "requirePragma": false,
   "insertPragma": false,
   "proseWrap": "preserve",
-  "overrides": [
-    {
-      "files": ["cypress/**/**.ts"],
-      "options": {
-        "printWidth": 180
-      }
-    }
-  ]
+  "overrides": []
 }
